--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^2.7.2",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.12",
     "nodemon": "^1.17.2",
