--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "chart.js": "^2.7.2",
+    "css-loader": "^0.28.11",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.12",
     "nodemon": "^1.17.2",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react-dom": "^16.3.0",
+    "style-loader": "^0.20.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -23,6 +25,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "dotenv": "^5.0.1",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
