--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "test": "webpack-dev-server"
+    "test": "nodemon ./build/server.js",
+    "start": "node ./build server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chart.js": "^2.7.2",
     "css-loader": "^0.28.11",
+    "dotenv-webpack": "^1.5.5",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.12",
     "nodemon": "^1.17.2",
@@ -19,6 +21,7 @@
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.20.3"
   },
   "devDependencies": {
