--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "test": "nodemon ./build/server.js",
-    "start": "node ./build server.js"
+    "start": "node ./build/server.js"
   },
   "author": "",
   "license": "ISC",
