--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {"presets": [
-    "env","react"
+    "env","react","es2015"
+],
+"plugins": [
+    "syntax-async-functions","transform-regenerator"
 ]}
