--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.1.0",
     "chart.js": "^2.7.2",
     "css-loader": "^0.28.11",
     "dotenv-webpack": "^1.5.5",
+    "google-charts": "^1.1.0",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.12",
     "nodemon": "^1.17.2",
