--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "voting app",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --watch",
     "test": "nodemon ./build/server.js",
     "start": "node ./build/server.js"
   },
